# zeroclaw-hetzner-k8s-boilerplate

./: .commitlintrc.json  .editorconfig  .env.example  .env.local.example  .env.prod.example  .eslintrc.cjs  .gitattributes  .gitignore  .lintstagedrc.cjs  .lintstagedrc.json  .prettierignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  MAINTENANCE_AUDIT_CHECKLIST.md  Makefile  README.md  SECURITY.md  commitlint.config.cjs  docker-compose.local.yml  docker-compose.yml  package-lock.json  package.json  sonar-project.properties  tsconfig.base.json
.github/: dependabot.yml
backend/: .dockerignore  .env.example  .eslintrc.json  Dockerfile  README.md  jest.config.js  jest.config.ts  package-lock.json  package.json  tsconfig.json
docs/: architecture.md  mcp-control-plane.md
frontend/: .dockerignore  .env.example  .eslintrc.json  Dockerfile  README.md  angular.json  karma.conf.js  nginx.conf  package-lock.json  package.json
mcp-servers/n8n-bridge/: .dockerignore  Dockerfile  pyproject.toml
mcp-servers/n8n-bridge/src/n8n_bridge/: __init__.py  planning_config.py  server.py
mcp-servers/n8n-bridge/tests/: test_agent_control_plane.py  test_audit_ledger.py  test_autonomous_optimization.py  test_compliance_platform.py  test_confidential_execution.py  test_failure_mode.py  test_integration_matrix.py  test_model_routing.py  test_package_import_side_effects.py  test_planning_config_env.py  test_policy_engine.py  test_rollout_engine.py  test_server.py  test_sovereignty_mode.py  test_telemetry_exporter.py  test_vector_memory_lifecycle.py
scripts/: local-dev.cmd  local-dev.ps1  (+1 more)
(+127 files in other folders)
